--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -24,7 +24,7 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray()
+selected_paths=PackedStringArray("res://")
 uncollapsed_paths=PackedStringArray("Favorites", "res://")
 
 [docks/History]
@@ -35,7 +35,7 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Menu/menu.tscn", "res://Game/game.tscn")
-current_scene="res://Game/game.tscn"
+current_scene="res://Menu/menu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -44,7 +44,7 @@ bottom_panel_offsets={
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -54,8 +54,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/exit.gd"]
-selected_script="res://scripts/exit.gd"
+open_scripts=["res://scripts/menu.gd"]
+selected_script="res://scripts/menu.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -63,7 +63,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(474, 207, 972, 589)
+floating_window_rect=Rect2i(474, 236, 972, 560)
 floating_window_screen=0
 
 [ShaderEditor]
