✨ feat: add settings menu

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -25,7 +25,7 @@ display_mode=0
 file_sort=0
 file_list_display_mode=1
 selected_paths=PackedStringArray("res://")
-uncollapsed_paths=PackedStringArray("Favorites", "res://")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Image/", "res://Game/")
 
 [docks/History]
 
@@ -39,11 +39,11 @@ current_scene="res://Menu/menu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
-"Debugger": 0,
+"Debugger": -286,
 "Output": 0,
 "Shader Editor": 0
 }
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [EditorWindow]
@@ -63,7 +63,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(474, 236, 972, 560)
+floating_window_rect=Rect2i(474, 207, 972, 589)
 floating_window_screen=0
 
 [ShaderEditor]
