--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 64,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 30,
+"scroll_position": 7.800000000000001,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
