--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -24,7 +24,7 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://")
+selected_paths=PackedStringArray("res://Image/SupportMenu4.jpg")
 uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Image/", "res://Game/")
 
 [docks/History]
@@ -44,7 +44,7 @@ bottom_panel_offsets={
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [EditorWindow]
 
@@ -63,7 +63,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(474, 207, 972, 589)
+floating_window_rect=Rect2i(0, 23, 1920, 1017)
 floating_window_screen=0
 
 [ShaderEditor]
